feat(auth-service): implement authentication service with JWT and user management
- Add AuthService for user registration, login, token generation, and profile retrieval.
- Implement JWT strategy and guard for securing routes.
- Create user entity with roles and necessary fields.
- Add DTOs for authentication requests and responses.
- Set up Redis placeholders for refresh token management.
- Configure Swagger documentation for the Auth Service API.
- Update main entry point for the Auth Service with CORS and validation.
- Add necessary dependencies for JWT and bcrypt.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "start:gateway": "nest start ecommerce-backend-services --watch",
     "start:category": "nest start category-service --watch",
     "start:item": "nest start item-service --watch",
+    "start:auth": "nest start auth-service --watch",
     "dev": "npm run start:dev",
-    "dev:all": "concurrently \"npm run start:category\" \"npm run start:item\" \"npm run start:gateway\"",
-    "dev:services": "concurrently \"npm run start:category\" \"npm run start:item\"",
+    "dev:all": "concurrently \"npm run start:category\" \"npm run start:item\" \"npm run start:auth\" \"npm run start:gateway\"",
+    "dev:services": "concurrently \"npm run start:category\" \"npm run start:item\" \"npm run start:auth\"",
     "dev:micro": "npm run dev:all",
     "services": "npm run dev:services",
     "all": "npm run dev:all",
@@ -33,13 +34,18 @@
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/pg": "^8.15.5",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -52,9 +58,11 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "concurrently": "^9.2.1",
     "eslint": "^9.35.0",
