--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,16 @@ NODE_ENV=development
 API_GATEWAY_PORT=4000
 CATEGORY_SERVICE_PORT=4001
 ITEM_SERVICE_PORT=4002
+AUTH_SERVICE_PORT=4003
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=1h
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:4000
+
+# Redis Configuration (for refresh tokens - you'll implement this)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
