--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,4 @@ CORS_ORIGIN=http://localhost:4000
 # Redis Configuration (for refresh tokens - you'll implement this)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=put_your_redis_password_here
